@@ -189,6 +189,9 @@ Date: 2024-12-08
     - Dou;bed the stack size of all catalysts, changed stack size of catalyst containers to 25 instead of 10.
     - PM 0.6.500 requires you to have 2.0.56 installed now, due to a crash that can occur with reactors.
     - Havled the amount of mercury you get per craft (50 > 25).
+    - Lowered the amount of coke needed for a bunch of different recipe (titanium oxide, pig iron, zirconia, etc).
+    - Changed the ratio of coal to coke to 1.5 : 1, and changed the coke to coal recipe to take 9 coal for 6 instead of 8 for 5.
+
   Fixes:
     - Fixed the science pack item names captilisation.
     - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
